# cita-vm

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md
benches/: benchmark.rs  c.rs  c.sol
docs/: state.md  state_tests.rst
evm/: Cargo.toml
evm/src/: common.rs  core.rs  err.rs  ext.rs  extmock.rs  instructions.rs  interpreter.rs  lib.rs  memory.rs  opcodes.rs  stack.rs
evm/src/tests/: extmock.rs  mod.rs
evm/tests/: interpreter_test.rs  memory_test.rs  stack_test.rs
evmbin/: Cargo.toml
evmbin/src/: main.rs
ewasm/: Cargo.toml
examples/: riscv_c_fibonacci.c  riscv_c_fibonacci.rs  riscv_c_sdk.c  riscv_c_sdk.rs  riscv_c_simplestorage.c  riscv_c_simplestorage.rs  simplestorage.rs
examples/storage_example/: simplestorage.rs
src/: database.rs  err.rs  evm.rs  executive.rs  fake.rs  instructions.rs  lib.rs  native.rs  opcode.rs  precompile.rs  precompiled.rs  state_db.rs  types.rs
src/common/: hash.rs  hasher.rs  mod.rs
src/evm/: common.rs  err.rs  ext.rs  extmock.rs  interpreter.rs  memory.rs  mod.rs  native.rs  opcodes.rs  stack.rs
src/interpreter/: common.rs  gas_table.rs  interpreter.rs  jump_table.rs  memory.rs  mod.rs  stack.rs
src/json_tests/: common.rs  general_state_test.rs  mod.rs  vm_test.rs
src/riscv/: README.md  interpreter.rs  mod.rs  utils.rs
src/riscv/c/: pvm.h
src/riscv/syscall/: common.rs  convention.rs  debug.rs  environment.rs  mod.rs  ret.rs  saveload.rs
src/state/: account.rs  account_db.rs  err.rs  hash_keccak.rs  mod.rs  object_entry.rs  state.rs
src/statedb/: mod.rs  statedb.rs
state/: Cargo.toml
state/src/: account.rs  account_db.rs  account_entry.rs  err.rs  errors.rs  hash_keccak.rs  hash_sha3.rs  lib.rs  object_entry.rs  state.rs  utils.rs
state/src/trie/: codec.rs  hasher.rs  mod.rs
tests/: interpreter_test.rs  memory_test.rs  opcode_test.rs  riscv_test.rs  stack_test.rs  state_misc.rs  state_solidity_test.rs  state_test.rs
tests/c/: exit_1.c
