[package]
name = "cita-vm"
version = "0.2.1"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "CITA VM"
license = "Apache-2.0"
homepage = "https://github.com/cryptape/cita-vm"
documentation = "https://github.com/cryptape/cita-vm/blob/master/README.md"

[dependencies]
byteorder = "1.3.2"
cita_trie = "2.0.0"
ethereum-types = "0.8.0"
hashbrown = { version = "0.6.3", features = ["rayon"] }
hasher = "0.1.3"
hex = "0.4.0"
libsecp256k1 = "0.3.2"
log = "0.4.8"
ripemd160 = "0.8.0"
rlp = "0.4.4"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
sha2 = "0.8.0"
rayon = "1.2.1"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["sha3hash"]
sha3hash = ["hasher/hash-keccak"]
blake2bhash = ["hasher/hash-blake2b"]
sm3hash = ["hasher/hash-sm3"]
