[package]
name = "cita-vm"
version = "0.2.1"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "CITA VM"
license = "Apache-2.0"
homepage = "https://github.com/cryptape/cita-vm"
documentation = "https://github.com/cryptape/cita-vm/blob/master/README.md"

[dependencies]
byteorder = "1.0"
env_logger = "0.6"
ethereum-types = "0.4"
hashbrown = { version = "0.3", features = ["rayon"] }
hasher = { version="0.1" }
hex = "0.3"
secp256k1 = { package = "libsecp256k1", version = "0.6" }
log = "0.4"
ripemd160 = "0.8"
rlp = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
sha3 = "0.8"
rayon = "1.0"
cita_trie = "3.0"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["sha3hash"]
sha3hash = ["hasher/hash-keccak"]
blake2bhash = ["hasher/hash-blake2b"]
sm3hash = ["hasher/hash-sm3"]
