[package]
name = "cita-evm"
version = "0.1.5"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "CITA VM"
license = "Apache-2.0"
homepage = "https://github.com/cryptape/cita-vm"
documentation = "https://github.com/cryptape/cita-vm/blob/master/README.md"

[dependencies]
env_logger = "0.6"
ethereum-types = "0.4"
hex = "0.3"
keccak-hash = "0.1"
log = "0.4"
