[package]
name = "cita-state"
version = "0.1.4"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "CITA VM"
license = "Apache-2.0"
homepage = "https://github.com/cryptape/cita-vm"
documentation = "https://github.com/cryptape/cita-vm/blob/master/README.md"

[dependencies]
cita_trie = "1.0"
env_logger = "0.6"
ethereum-types = "0.4"
hex = "0.3"
log = "0.4"
lru-cache = "0.1"
rlp = "0.3"
sha3 = "0.8"
tiny-keccak = "1.4"
hashbrown = "0.3"
# hashbrown = { version = "0.3", features = ["rayon"] }
# rayon = "1.0"

[features]
default = ["hashlib-keccak"]
hashlib-keccak = []
hashlib-sha3 = []
